--- a/src/index.html
+++ b/src/index.html
@@ -9,29 +9,32 @@
   <body>
     <header class="header">
         <navbar id="navbar" class="navbar">
-            <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
+            <a href="#home"><p class="section-link">Home</p></a>
+            <a href="#aboutme"><p class="section-link">About Me</p></a>
+            <a href="#projects"><p class="section-link">Projects</p></a>
+            <a href="#contact"><p class="section-link">Contact</p></a>
           </navbar>
     </header>
     <main>
         <div class="wrapper">
             <img id="profile-pic" src="assets/DSC00058.jpg" />
             <div id="welcome-section">
-                <h1></h1>
-                <h2><i></i><h2>
-              </div>
+              <h2>Hello!</h2>
+              <h1>I Am Nam Tran</h1>
+              <p>I'm a software engineer with 3 years of experience.<br> My expertise is in website and mobile design.</p>
+            </div>
           
-              <div id="projects">
-                <div class="project-tile">
-                  <a></a>
-                </div>
-                <div class="project-tile">
-                  <a></a>
-                </div>
-                <div class="project-tile">
-                  <a></a>
-                </div>
+            <div id="projects">
+              <div class="project-tile">
+                <a></a>
               </div>
+              <div class="project-tile">
+                <a></a>
+              </div>
+              <div class="project-tile">
+                <a></a>
+              </div>
+            </div>
         </div>
         <a id="profile-link" target="_blank"></a>
     </main>
