added second headshot

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
 
           <section id="aboutme">
             <h1 class="section-header">About Me</h1>
-            <img id="headshot" src="" />
+            <img id="headshot" src="assets/DSC07850.jpg" />
           </section>
           
           <section id="projects">
