--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <script src="/script.js" async defer></script>
     <header>
       <navbar id="navbar" class="navbar">
         <a href="#home"><p class="section-link">Home</p></a>
@@ -34,6 +35,7 @@
 
           <section id="aboutme">
             <h1 class="section-header">About Me</h1>
+            <span id="aboutme-bio"></span>
             <img id="headshot" src="assets/DSC07850.jpg" />
           </section>
           
