finished About Me section

--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,10 @@
 
           <section id="aboutme">
             <h1 class="section-header">About Me</h1>
-            <span id="aboutme-bio"></span>
-            <img id="headshot" src="assets/DSC07850.jpg" />
+            <div class="flex-parent">
+              <div id="aboutme-bio"></div>
+              <img id="headshot" src="assets/DSC07850.jpg" />
+            </div>
           </section>
           
           <section id="projects">
