added flex container to Home section

--- a/src/index.html
+++ b/src/index.html
@@ -18,18 +18,20 @@
     <main>
         <div class="wrapper">
           <section id="home">
-            <img id="profile-pic" src="assets/DSC00058.jpg" />
-            <div id="welcome-section">
-              <h2>Hello!</h2>
-              <h1>I Am Nam Tran</h1>
-              <p>I'm a software engineer with 3 years of experience.<br> 
+            <div class="flex-parent">
+              <img id="profile-pic" src="assets/DSC00058.jpg" />
+              <div id="welcome-section">
+                <h2>Hello!</h2>
+                <h1>I Am Nam Tran</h1>
+                <p>I'm a software engineer with 3 years of experience.<br> 
                 My expertise is in website and mobile design.</p>
-              <form action="https://github.com/namtran-swe" target="_blank">
-                <button id="github-btn" class="ext-link">My Github!</button>
-              </form>
-              <form action="https://www.linkedin.com/in/namtran-swe/" target="_blank">
-                <button id="linkedin-btn" class="ext-link">My LinkedIn!</button>
-              </form>
+                <form action="https://github.com/namtran-swe" target="_blank">
+                  <button id="github-btn" class="ext-link">My Github!</button>
+                </form>
+                <form action="https://www.linkedin.com/in/namtran-swe/" target="_blank">
+                  <button id="linkedin-btn" class="ext-link">My LinkedIn!</button>
+                </form>
+              </div>
             </div>
           </section>
 
