inital project section work

--- a/src/index.html
+++ b/src/index.html
@@ -10,26 +10,26 @@
     <script src="/script.js" async defer></script>
     <header>
       <navbar id="navbar" class="navbar">
-        <a href="#home"><p class="section-link">Home</p></a>
-        <a href="#aboutme"><p class="section-link">About Me</p></a>
-        <a href="#projects"><p class="section-link">Projects</p></a>
-        <a href="#contact"><p class="section-link">Contact</p></a>
+        <a href="#home"><p class="section-link overpass">Home</p></a>
+        <a href="#aboutme"><p class="section-link overpass">About Me</p></a>
+        <a href="#projects"><p class="section-link overpass">Projects</p></a>
+        <a href="#contact"><p class="section-link overpass">Contact</p></a>
       </navbar>
     <main>
         <div class="wrapper">
           <section id="home">
             <div class="flex-parent">
               <img id="profile-pic" src="assets/DSC00058.jpg" />
-              <div id="welcome-section">
+              <div id="welcome-section" class="vietnam-pro">
                 <h2>Hello!</h2>
                 <h1>I Am Nam Tran</h1>
                 <p>I'm a software engineer with 3 years of experience.<br> 
                 My expertise is in website and mobile design.</p>
                 <form action="https://github.com/namtran-swe" target="_blank">
-                  <button id="github-btn" class="ext-link">My Github!</button>
+                  <button id="github-btn" class="ext-link overpass">My Github!</button>
                 </form>
                 <form action="https://www.linkedin.com/in/namtran-swe/" target="_blank">
-                  <button id="linkedin-btn" class="ext-link">My LinkedIn!</button>
+                  <button id="linkedin-btn" class="ext-link overpass">My LinkedIn!</button>
                 </form>
               </div>
             </div>
@@ -38,21 +38,32 @@
           <section id="aboutme">
             <h1 class="section-header">About Me</h1>
             <div class="flex-parent">
-              <div id="aboutme-bio"></div>
+              <div id="aboutme-bio" class="vietnam-pro"></div>
               <img id="headshot" src="assets/DSC07850.jpg" />
             </div>
           </section>
           
           <section id="projects">
             <h1 class="section-header">My Projects</h1>
-            <div class="project-tile">
-              <a></a>
-            </div>
-            <div class="project-tile">
-              <a></a>
-            </div>
-            <div class="project-tile">
-              <a></a>
+            <h3 class="center-text vietnam-pro">A look at some of the projects that I've worked on!<br>For a look at all my projects check out my <a href="https://github.com/namtran-swe" target="_blank">Github!</a></h3>
+            <div class="flex-parent">
+              <div class="project-tile">
+                <form action="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-product-landing-page-project/build-a-product-landing-page" target="_blank">
+                  <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-product-landing-page-project/build-a-product-landing-page" target="_blank""><img src="assets/productLandingPage.JPG" class="project-pic"/></a>
+                  <button class="ext-link overpass">Landing Page</button>
+                </form>
+              </div>
+              <div class="project-tile">
+                <form>
+                  <img src="" class="project-pic"/>
+                </form>
+              </div>
+              <div class="project-tile">
+                <form action="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-tribute-page-project/build-a-tribute-page" target="_blank">
+                  <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-tribute-page-project/build-a-tribute-page" target="_blank"><img src="assets/tributePage.JPG" class="project-pic"/></a>
+                  <button class="ext-link overpass">Tribute Page</button>
+                </form>
+              </div>
             </div>
           </section>
 
