final content additions

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       </navbar>
     <main>
         <div class="wrapper">
-          <section id="home">
+          <section id="home" class="top-pad-80">
             <div class="flex-parent">
               <img id="profile-pic" src="assets/DSC00058.jpg" />
               <div id="welcome-section" class="vietnam-pro">
@@ -35,7 +35,7 @@
             </div>
           </section>
 
-          <section id="aboutme">
+          <section id="aboutme" class="top-pad-80">
             <h1 class="section-header">About Me</h1>
             <div class="flex-parent">
               <div id="aboutme-bio" class="vietnam-pro"></div>
@@ -43,7 +43,7 @@
             </div>
           </section>
           
-          <section id="projects">
+          <section id="projects" class="top-pad-80">
             <h1 class="section-header">My Projects</h1>
             <h3 class="center-text vietnam-pro">A look at some of the projects that I've worked on!<br>For a look at all my projects check out my <a href="https://github.com/namtran-swe" target="_blank">Github!</a></h3>
             <div class="flex-parent">
@@ -54,8 +54,9 @@
                 </form>
               </div>
               <div class="project-tile">
-                <form>
-                  <img src="" class="project-pic"/>
+                <form action="https://github.com/namtran-swe/fitness-app" target="_blank">
+                  <a href="https://github.com/namtran-swe/fitness-app" target="_blank"><img src="assets/fitnessApp.JPG" class="project-pic"/></a>
+                  <button class="ext-link overpass">Fitness App</button>
                 </form>
               </div>
               <div class="project-tile">
@@ -67,8 +68,20 @@
             </div>
           </section>
 
-          <section id="contact">
+          <section id="contact" class="top-pad-80">
             <h1 class="section-header">Contact Me</h1>
+            <h3 class="center-text vietnam-pro">Feel free to contact me through one of the methods below!</h3>
+            <div class="contact-wrapper">
+              <div id="email" class="overpass">
+                Email: <a href=mailto:"namtran.swe@gmail.com">namtran.swe@gmail.com</a>
+              </div>
+              <div id="phone" class="overpass">
+                Phone: (714)-417-3072
+              </div>
+              <div id="linkedin" class="overpass">
+                LinkedIn: <a href="https://www.linkedin.com/in/namtran-swe/" target="_blank">@namtran-swe</a>
+              </div>
+            </div>
           </section>
         </div>
         <a id="profile-link" target="_blank"></a>
